# copilot-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
src/copilot_cli/: __main__.py  main.py
src/copilot_cli/cli/: arguments.py  runners.py
src/copilot_cli/common/cache/: string_key_value_cache.py  token_cache.py
src/copilot_cli/common/file_browser/: app.py
src/copilot_cli/copilot/chat_automator/: chat_automator.py
src/copilot_cli/copilot/chat_automator/log_formatting/: automated_chat_log_formatter.py  automated_chat_websocket_message_formatter.py
src/copilot_cli/copilot/copilot_connector/: copilot_connector.py
src/copilot_cli/copilot/dump/: dump.py
src/copilot_cli/copilot/dump/input_extractor/: document_input_extractor.py
src/copilot_cli/copilot/gui/: gui.py
src/copilot_cli/copilot/interactive_chat/: interactive_chat.py  interactive_chat_websocket_formatter.py
src/copilot_cli/copilot/loggers/: composite_logger.py  console_logger.py  file_logger.py
src/copilot_cli/copilot/models/: chat_argument.py
src/copilot_cli/copilot/spearphishing/: automated_spear_phisher.py
src/copilot_cli/copilot/websocket_message/: iwebsocket_message.py  iwebsocket_message_formatter.py  websocket_message.py  websocket_parsed_message.py
src/copilot_cli/copilot/whoami/: whoami.py
src/copilot_cli/puppeteer_get_substrate_bearer/: browser.js  get_substrate_bearer_office.js  get_substrate_bearer_teams.js  package-lock.json  package.json  readme.md  utils.js
