[metadata]
name = copilot-cli
author = Extracted from mbrg/power-pwn (Zenity Labs)
version = 0.1.0
description = Standalone M365 Copilot CLI — interact with Copilot365 via Office/Teams substrate API
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    requests >=2.31.0
    pyjwt >=2.6.0
    websockets >=12.0.0
    Flask >=2.2.5
    typing_extensions >=4.0.0

package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.package_data]
copilot_cli =
    puppeteer_get_substrate_bearer/*.js
    puppeteer_get_substrate_bearer/package.json
    puppeteer_get_substrate_bearer/package-lock.json
    puppeteer_get_substrate_bearer/readme.md

[options.entry_points]
console_scripts =
    copilot-cli = copilot_cli.main:main
